arithmetics.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: arithmetics-dpl
spec:
  selector:
    matchLabels:
      app: arithmetics

  template:
    metadata:
      labels:
        app: arithmetics
    
    spec:
      containers:
      - name: arithmetics-dpl
        image: public.ecr.aws/j3c6d5f6/arithmetics:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"

        ports:
          - containerPort: 8080
          - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: arithmetics
spec:
  selector:
    app: arithmetics
  ports:
  - port: 8080
    targetPort: 8080
