arithmetics-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arithmetics-ing
  labels:
    name: arithmetics-ing
spec:
  rules:
  - host: arithmetics.jlcorradi.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: arithmetics-ui-svc
            port: 
              number: 80
